--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -69,7 +69,7 @@ html {
 }
 
 .background {
-  whidth: 100%;
+  width: 100%;
   height: 100vh;
   min-height: 700px;
   background: linear-gradient(to bottom right, #ff8b57, #fb5656);
